--- a/Code/style.css
+++ b/Code/style.css
@@ -8,35 +8,41 @@ body {
     background-color: #f5f5f5;
 }
 
-header,footer,section,aside{
+header, footer, section, aside {
     display: block;
 }
 
-#banner, #content, footer{
-    padding-left: 5%;
-    padding-right: 5%;
-    width:90%;
+header, #content, footer {
+    padding-left: 15%;
+    padding-right: 15%;
+    width: 70%;
 }
 
-#banner{
-    background-color: #d3d3d3;
-}
-
-#gameArea{
+#gameArea {
     float: left;
     width: 100%;
-    padding: 5%;
 }
 
-footer{
-    background-color: #d3d3d3;
-    position:fixed;
-    bottom:0;
-    left:0;
+.tangram {
+    width: 20%;
+    margin-left: 6.66%;
+    margin-right: 6.66%;
+    margin-top: 2%;
+    float:left;
+    background-color: #ffffff;
 }
 
-#state{
-    text-align:center;
+.tangram:hover {
+    background-color: #7ab2ff;
+}
+
+footer {
+    bottom: 0;
+    left: 0;
+}
+
+#state {
+    text-align: center;
     float: right;
 }
 
