--- a/Code/style.css
+++ b/Code/style.css
@@ -1,11 +1,13 @@
 html {
-    margin: 0px;
-    padding: 0px;
+    position: relative;
+    min-height: 100%;
 }
 
-body {
-    margin: 0 auto;
-    background-color: #f5f5f5;
+html, body {
+    margin: 0;
+    padding: 0;
+    background-color: #E9E9E9;
+    font-family: Oxygen, sans-serif;
 }
 
 header, footer, section, aside {
@@ -30,34 +32,67 @@ header, #content, footer {
     margin-right: 6.66%;
     margin-top: 2%;
     float:left;
-    background-color: #ffffff;
+    background-color: #BCBCBC;
+    border-radius: 5%;
+}
+
+#game {
+    display: none;
+    width: 80%;
+    margin-right: 10%;
+    margin-left: 10%;
+    background-color: #BCBCBC;
+    border-radius: 5%;
+    margin-top: 2%;
 }
 
 .tangram:hover {
-    background-color: #7ab2ff;
+    background-color: #FF9900;
+
 }
 
-#explain {
+.clear {
+    clear:both;
+}
+
+#buttons{
+    text-align: center;
     padding-top: 2%
 }
 
+.re{
+    font-family: Oxygen, sans-serif;
+    font-size: 100%;
+    height: 5%;
+    color: #BCBCBC;
+    background-color: #3299BB;
+    padding-left: 2%;
+    padding-right: 2%;
+    width: 15%;
+    border: none;
+    border-radius: 20px;
+}
+
+.re:hover {
+    color: #3299BB;
+    background-color: #BCBCBC;
+}
+
+#explain {
+    float: left;
+    padding-top: 2%;
+    padding-bottom: 2em;
+}
+
 footer {
+    height: 2em;
+    position: absolute;
     bottom: 0;
     left: 0;
-    margin-top: 2%
 }
 
-#state {
-    text-align: center;
-    float: right;
-}
-
-@media all and (max-width: 600px) {
-    .tangram{
-        width: 100%;
-        margin-left: 0%;
-        margin-right: 0%;
-    }
+*:focus {
+    outline: 0;
 }
 
 
