--- a/Code/style.css
+++ b/Code/style.css
@@ -64,7 +64,7 @@ header, #content, footer {
     padding-top: 2%
 }
 
-.re{
+button{
     font-family: Oxygen, sans-serif;
     font-size: 100%;
     height: 5%;
@@ -77,9 +77,13 @@ header, #content, footer {
     border-radius: 20px;
 }
 
-.re:hover {
+button:hover {
     color: #3299BB;
     background-color: #BCBCBC;
+}
+
+.buttonText {
+    display: inline;
 }
 
 svg text {
@@ -107,6 +111,12 @@ footer {
 
 *:focus {
     outline: 0;
+}
+
+@media (max-width: 1150px) {
+    .buttonText{
+        display: none;
+    }
 }
 
 
