--- a/Code/style.css
+++ b/Code/style.css
@@ -49,6 +49,7 @@ header, #content, footer {
     -moz-user-select: none;
     -o-user-select: none;
     user-select: none;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 .tangram:hover {
