--- a/Code/style.css
+++ b/Code/style.css
@@ -88,7 +88,7 @@ button:hover {
 }
 
 svg text {
-    font-family: FontAwesome;
+    font-family: FontAwesome, sans-serif;
 }
 
 #select, #set, #hint, #sol {
@@ -114,7 +114,7 @@ footer {
     outline: 0;
 }
 
-@media (max-width: 1150px) {
+@media (max-width: 800px) {
     .buttonText {
         display: none;
     }
